lesson 4, plus some homework

--- a/lessons/index.html
+++ b/lessons/index.html
@@ -49,6 +49,14 @@
       .mermaid > svg {
         width: 100%;
       }
+
+      .hidden-answer {
+        transition: opacity 0.5s;
+        opacity: 0;
+      }
+      .hidden-answer.unhide {
+        opacity: 1;
+      }
     </style>
   </head>
   <body>
@@ -111,6 +119,12 @@
 
         // Learn about plugins: https://revealjs.com/plugins/
         plugins: [RevealMarkdown, RevealHighlight, RevealNotes, MermaidPlugin],
+      });
+      document.querySelectorAll(".hidden-answer").forEach((el) => {
+        const button = el.nextElementSibling.querySelector("button");
+        button.addEventListener("click", () => {
+          el.classList.toggle("unhide");
+        });
       });
     </script>
   </body>
