--- a/lessons/index.html
+++ b/lessons/index.html
@@ -71,6 +71,7 @@
       import RevealMarkdown from "https://cdnjs.cloudflare.com/ajax/libs/reveal.js/4.4.0/plugin/markdown/markdown.esm.min.js";
       import RevealHighlight from "https://cdnjs.cloudflare.com/ajax/libs/reveal.js/4.4.0/plugin/highlight/highlight.esm.min.js";
       import RevealNotes from "https://cdnjs.cloudflare.com/ajax/libs/reveal.js/4.4.0/plugin/notes/notes.esm.min.js";
+      import RevealMath from "https://cdnjs.cloudflare.com/ajax/libs/reveal.js/4.4.0/plugin/math/math.esm.min.js";
       import mermaid from "https://cdn.jsdelivr.net/npm/mermaid@10/dist/mermaid.esm.min.mjs";
       const searchParams = new URL(document.location).searchParams;
 
@@ -118,7 +119,7 @@
         markdown: { gfm: true },
 
         // Learn about plugins: https://revealjs.com/plugins/
-        plugins: [RevealMarkdown, RevealHighlight, RevealNotes, MermaidPlugin],
+        plugins: [RevealMarkdown, RevealHighlight, RevealMath.KaTeX, RevealNotes, MermaidPlugin],
       });
       document.querySelectorAll(".hidden-answer").forEach((el) => {
         const button = el.nextElementSibling.querySelector("button");
