--- a/lessons/index.html
+++ b/lessons/index.html
@@ -42,6 +42,7 @@
         background-color: rgba(192, 192, 192, 0.3);
         padding-left: 0.2em;
         padding-right: 0.2em;
+        font-size: 0.8em;
       }
       .reveal section > table {
         font-size: 0.7em;
