update deploy and lesson 1

--- a/lessons/index.html
+++ b/lessons/index.html
@@ -63,7 +63,9 @@
   <body>
     <div class="reveal">
       <div class="slides">
-        <section data-separator-vertical="\r?\nvvvvvvv*\r?\n"></section>
+        <section data-separator-vertical="\r?\nvvvvvvv*\r?\n"
+                    data-separator-notes="^SpeakerNotes:"
+                ></section>
       </div>
     </div>
 
