lesson 3 is done

--- a/lessons/index.html
+++ b/lessons/index.html
@@ -58,6 +58,9 @@
       .hidden-answer.unhide {
         opacity: 1;
       }
+    .reveal .katex {
+        font: unset;
+    }
     </style>
   </head>
   <body>
