lesson 4, without homework

--- a/lessons/index.html
+++ b/lessons/index.html
@@ -47,6 +47,9 @@
       .reveal section > table {
         font-size: 0.7em;
       }
+    .reveal pre.mermaid {
+      text-align: center;
+    }
       .mermaid > svg {
         width: 100%;
       }
