--- a/lessons/index.html
+++ b/lessons/index.html
@@ -32,6 +32,7 @@
       href="https://cdnjs.cloudflare.com/ajax/libs/reveal.js/4.4.0/plugin/highlight/monokai.min.css"
     />
     <style>
+
       .reveal section {
         font-size: 0.8em;
       }
@@ -63,6 +64,18 @@
       }
     .reveal .katex {
         font: unset;
+    }
+    .reveal .note {
+      border: 4px solid hsl(30 80% 50% / 25%);
+      font-size: .75em;
+      padding: .7em .7em .7em 6.4em;
+      width: 100%;
+      box-sizing: border-box;
+    min-height: 5.7em;
+    background-image: url("data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' width='40' height='40'><text x='4' y='36' font-size='32'>⚠️</text></svg>");
+    background-repeat: no-repeat;
+    background-size: 5em;
+    background-position: 0 -.35em;
     }
     </style>
   </head>
